# opx-nas-platform-vm

./: Makefile.am  README.md  configure.ac
cfg/: base_port_physical_mapping_table.xml  base_qos_init.xml  phy_media_default_npu_setting.xml
debian/: changelog  control  libopx-nas-platform-vm1.shlibs
